[gd_scene load_steps=21 format=3 uid="uid://bvoobir73nuxi"]

[ext_resource type="Script" path="res://scenes/gameobjects/orc.gd" id="1_4cqec"]
[ext_resource type="Texture2D" uid="uid://6x16m8xruv43" path="res://assets/Sprites/Orc.png" id="1_wk3qr"]
[ext_resource type="PackedScene" uid="uid://cxvof3ef3d7f" path="res://scenes/components/velocity_component.tscn" id="2_8y2cx"]
[ext_resource type="PackedScene" uid="uid://cqf3hon38ngj2" path="res://scenes/components/enemy_radar_component.tscn" id="3_2wcqb"]
[ext_resource type="PackedScene" uid="uid://btt6snnj05le0" path="res://scenes/components/health_component.tscn" id="3_5rkpu"]
[ext_resource type="PackedScene" uid="uid://vv6k3nr5kw1t" path="res://scenes/components/flinch_component.tscn" id="3_bv0mk"]
[ext_resource type="PackedScene" uid="uid://d4immjrrh5iwh" path="res://scenes/components/death_component.tscn" id="3_hxuuj"]
[ext_resource type="PackedScene" uid="uid://crujcbptu0hb8" path="res://scenes/components/hitbox_component.tscn" id="4_74rdo"]
[ext_resource type="PackedScene" uid="uid://c87172ansg6ek" path="res://scenes/components/hurt_component.tscn" id="4_pc1ga"]
[ext_resource type="Shader" path="res://resources/white.gdshader" id="7_p8w0d"]
[ext_resource type="AudioStream" uid="uid://j2hhtbni14be" path="res://assets/Audio/footstep_carpet_000.ogg" id="10_7yon5"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ms74d"]

[sub_resource type="CircleShape2D" id="CircleShape2D_d76wl"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_j2hl6"]
radius = 80.0

[sub_resource type="CircleShape2D" id="CircleShape2D_musvx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_bi34f"]
shader = ExtResource("7_p8w0d")

[sub_resource type="Animation" id="Animation_5g4fp"]
resource_name = "Idle"
length = 1.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_idctb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:use_parent_material")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_u58e4"]
resource_name = "Run"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3lvpe"]
_data = {
"Idle": SubResource("Animation_5g4fp"),
"RESET": SubResource("Animation_idctb"),
"Run": SubResource("Animation_u58e4")
}

[node name="Orc" type="CharacterBody2D"]
collision_layer = 0
script = ExtResource("1_4cqec")

[node name="VelocityComponent" parent="." instance=ExtResource("2_8y2cx")]
max_speed = 30
acceleration = 15.0

[node name="Flinch_component" parent="." node_paths=PackedStringArray("velocity_component") instance=ExtResource("3_bv0mk")]
velocity_component = NodePath("../VelocityComponent")

[node name="DeathComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("3_hxuuj")]
health_component = NodePath("../HealthComponent")

[node name="HealthComponent" parent="." instance=ExtResource("3_5rkpu")]
max_health = 1

[node name="HurtComponent" parent="." node_paths=PackedStringArray("health_component", "sprite") instance=ExtResource("4_pc1ga")]
health_component = NodePath("../HealthComponent")
character_type = Array[int]([2])
sprite = NodePath("../Sprite2D")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtComponent"]
shape = SubResource("CircleShape2D_ms74d")

[node name="Hitbox_component" parent="." instance=ExtResource("4_74rdo")]
collision_mask = 6
damage = 1
character_type = Array[int]([3])

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox_component"]
shape = SubResource("CircleShape2D_d76wl")

[node name="EnemyRadarComponent" parent="." instance=ExtResource("3_2wcqb")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyRadarComponent"]
shape = SubResource("CircleShape2D_j2hl6")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_musvx")

[node name="Sprite2D" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_bi34f")
use_parent_material = true
texture = ExtResource("1_wk3qr")
hframes = 4
vframes = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3lvpe")
}

[node name="HurtAudioStream" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_7yon5")

[connection signal="died" from="DeathComponent" to="." method="_on_death_component_died"]
